backed query stabilization